// IT Studio Portfolio Management System Database Schema
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table roles {
  id integer [primary key]
  name varchar(50) [unique, not null]
  description text
  created_at timestamp [default: `now()`]
}

Table users {
  id integer [primary key]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  role_id integer [not null]
  hourly_rate decimal(10,2) [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table permissions {
  id integer [primary key]
  name varchar(100) [unique, not null]
  description text
  resource varchar(50) [not null]
  action varchar(20) [not null]
}

Table role_permissions {
  id integer [primary key]
  role_id integer [not null]
  permission_id integer [not null]
  granted_at timestamp [default: `now()`]
  
  indexes {
    (role_id, permission_id) [unique]
  }
}

Table user_sessions {
  id integer [primary key]
  user_id integer [not null]
  session_token varchar(255) [unique, not null]
  ip_address inet
  user_agent text
  created_at timestamp [default: `now()`]
  expires_at timestamp [not null]
  is_active boolean [default: true]
}

Table audit_logs {
  id integer [primary key]
  user_id integer
  action varchar(50) [not null]
  resource_type varchar(50) [not null]
  resource_id integer
  old_values jsonb
  new_values jsonb
  ip_address inet
  user_agent text
  created_at timestamp [default: `now()`]
}

Table clients {
  id integer [primary key]
  company_name varchar(100) [not null]
  contact_person varchar(100) [not null]
  email varchar(100) [unique, not null]
  phone varchar(20)
  address text
  website varchar(255)
  tax_id varchar(50)
  notes text
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table projects {
  id integer [primary key]
  name varchar(150) [not null]
  description text
  client_id integer [not null]
  manager_id integer [not null]
  status varchar(20) [default: 'planning', note: 'planning, active, testing, completed, cancelled']
  priority varchar(10) [default: 'medium', note: 'low, medium, high, critical']
  estimated_budget decimal(12,2)
  actual_cost decimal(12,2) [default: 0]
  estimated_hours integer
  actual_hours integer [default: 0]
  start_date date [not null]
  end_date date
  actual_end_date date
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table project_members {
  id integer [primary key]
  project_id integer [not null]
  user_id integer [not null]
  role_in_project varchar(50) [not null]
  joined_at timestamp [default: `now()`]
  left_at timestamp
  is_active boolean [default: true]
  
  indexes {
    (project_id, user_id) [unique]
  }
}

Table task_statuses {
  id integer [primary key]
  name varchar(50) [unique, not null]
  description text
  color varchar(7) [note: 'HEX color code']
  is_final boolean [default: false]
  sort_order integer [default: 0]
}

Table tasks {
  id integer [primary key]
  project_id integer [not null]
  title varchar(200) [not null]
  description text
  status_id integer [not null]
  assigned_user_id integer
  created_by_user_id integer [not null]
  priority varchar(10) [default: 'medium', note: 'low, medium, high, critical']
  estimated_hours integer
  actual_hours integer [default: 0]
  due_date timestamp
  parent_task_id integer [note: 'Self-reference for subtasks']
  completion_percentage integer [default: 0, note: '0-100']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  completed_at timestamp
}

Table time_entries {
  id integer [primary key]
  user_id integer [not null]
  task_id integer [not null]
  start_time timestamp [not null]
  end_time timestamp
  hours decimal(5,2) [note: 'Calculated automatically']
  description text
  is_billable boolean [default: true]
  hourly_rate decimal(10,2) [note: 'From user profile']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table invoices {
  id integer [primary key]
  invoice_number varchar(50) [unique, not null]
  client_id integer [not null]
  project_id integer [note: 'Can be NULL for general invoices']
  issue_date date [not null]
  due_date date [not null]
  subtotal decimal(12,2) [not null]
  tax_rate decimal(5,2) [default: 0]
  tax_amount decimal(12,2) [default: 0]
  total_amount decimal(12,2) [not null]
  status varchar(20) [default: 'draft', note: 'draft, sent, paid, overdue, cancelled']
  notes text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table payments {
  id integer [primary key]
  invoice_id integer [not null]
  amount decimal(12,2) [not null]
  payment_date date [not null]
  payment_method varchar(50) [not null]
  transaction_id varchar(100)
  notes text
  created_at timestamp [default: `now()`]
}

// Relationships

// User management relationships
Ref: users.role_id > roles.id
Ref: role_permissions.role_id > roles.id
Ref: role_permissions.permission_id > permissions.id
Ref: user_sessions.user_id > users.id
Ref: audit_logs.user_id > users.id

// Project management relationships
Ref: projects.client_id > clients.id
Ref: projects.manager_id > users.id
Ref: project_members.project_id > projects.id
Ref: project_members.user_id > users.id

// Task management relationships
Ref: tasks.project_id > projects.id
Ref: tasks.status_id > task_statuses.id
Ref: tasks.assigned_user_id > users.id
Ref: tasks.created_by_user_id > users.id
Ref: tasks.parent_task_id > tasks.id // Self-reference for subtasks

// Time tracking relationships
Ref: time_entries.user_id > users.id
Ref: time_entries.task_id > tasks.id

// Financial relationships
Ref: invoices.client_id > clients.id
Ref: invoices.project_id > projects.id
Ref: payments.invoice_id > invoices.id
